--- a/package.json
+++ b/package.json
@@ -9,29 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@rainbow-me/rainbowkit": "^1.3.3",
+    "@tanstack/react-query": "^4.36.1",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "ethers": "^6.8.1",
+    "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "postcss": "^8.4.32",
     "react": "^18",
     "react-dom": "^18",
-    "wagmi": "^1.4.13",
-    "@rainbow-me/rainbowkit": "^1.3.3",
-    "viem": "^1.21.4",
-
-    "ethers": "^6.8.1",
-    "@tanstack/react-query": "^4.36.1",
-    "axios": "^1.6.2",
-    "lucide-react": "^0.294.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "@headlessui/react": "^1.7.17",
-    "clsx": "^2.0.0"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5"
   }
-} 
+}
